tests/errors/zero_division.out
cli:1:2: error: '/' zero division error
(/ 1 0)
 ^
1 error generated.
